--- a/javaDemo/springclouddemo/cloud-payment/pom.xml
+++ b/javaDemo/springclouddemo/cloud-payment/pom.xml
@@ -8,12 +8,17 @@
         <artifactId>springclouddemo</artifactId>
         <groupId>cn.os.springclouddemo</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>pom.xml</relativePath>
     </parent>
 
     <artifactId>cloud-payment</artifactId>
 
     <dependencies>
-
+        <!-- spring boot web -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
