--- a/javaDemo/springclouddemo/pom.xml
+++ b/javaDemo/springclouddemo/pom.xml
@@ -7,20 +7,25 @@
     <groupId>cn.os.springclouddemo</groupId>
     <artifactId>springclouddemo</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <modules>
         <module>cloud-payment</module>
     </modules>
-    <packaging>pom</packaging>
 
     <properties>
-
+        <spring-boot.version>2.2.6.RELEASE</spring-boot.version>
     </properties>
 
     <dependencyManagement>
+        <!-- 定义 spring boot 版本 -->
         <dependencies>
-
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
-
-
 </project>
