--- a/javaDemo/myframe/pom.xml
+++ b/javaDemo/myframe/pom.xml
@@ -21,7 +21,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
-        <!--` mysql connector  -->
+        <!-- mysql connector  -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
