--- a/javaDemo/springclouddemo/cloud-payment/src/main/resources/application.yml
+++ b/javaDemo/springclouddemo/cloud-payment/src/main/resources/application.yml
@@ -3,4 +3,10 @@ server:
 spring:
   application:
     name: cloud-payment
+    # mysql配置
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/p_springcloud?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+    username: root
+    password: root
 
