--- a/javaDemo/springclouddemo/api-common/pom.xml
+++ b/javaDemo/springclouddemo/api-common/pom.xml
@@ -11,4 +11,13 @@
 
     <artifactId>api-common</artifactId>
 
+    <dependencies>
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
+
 </project>
