--- a/javaDemo/springclouddemo/provider-payment/pom.xml
+++ b/javaDemo/springclouddemo/provider-payment/pom.xml
@@ -42,6 +42,10 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
