--- a/webDemo/vue-frame/package.json
+++ b/webDemo/vue-frame/package.json
@@ -10,6 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "element-ui": "^2.15.1",
+    "jquery": "^3.6.0",
+    "node-sass": "^4.11.1",
+    "style-loader": "^2.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -38,6 +42,8 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass": "1.32.0",
+    "sass-loader": "7.3.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
